--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "1.3.0",
     "colors": "~0.6.0",
     "extend": "3.0.0",
+    "jsdom": "9.8.3",
     "request": "2.58.0",
     "sprintf": "~0.1.1"
   }
